  + hwloc_obj_attr_snprintf() now displays KiB/MiB/GiB/TiB units for sizes.
  + The verbose attribute of hwloc_obj_type/attr_snprintf() is replaced
    by flags, where value 1 keeps the same meaning as in hwloc 2.x.
  + PCI domains are now always 32bits.
  + The "programming interface" of PCI devices is now exposed
    in PCI object attributes.
* Tools
  + lstopo has a new --osf option to tune the displaying of object
    attributes and units.
* Removed features
  + Importing and exporting from/to hwloc 1.x XML.
  + BlueGene/Q support.
  + Functions that were deprecated since 2.0:
    - hwloc_topology_insert_misc_object_by_parent()
    - hwloc_obj_cpuset_snprintf()
    - hwloc_obj_type_sscanf()
    - hwloc_cpuset_to_nodeset_strict()
    - hwloc_cpuset_from_nodeset_strict()
  + HWLOC_PCI_<domain>_<bus>_LOCALCPUS environment variables,
    superseded with a single HWLOC_PCI_LOCALITY since 2.0.
* Misc
  + XML format switches to 3.0 by default. Exporting to 2.x is
    possible with the new V2 XML export flag.


Version 2.9.0
-------------
* Backends
  + Expose the memory size of CXL memory devices (Type 3) on Linux.
  + The LevelZero backend now reports the "XeLinkBandwidth" distance
    matrix between L0 devices (and subdevices) when available.
  + Add support for CUDA compute capability up to 9.0.
* Tools
  + lstopo now switches to console mode when its output is redirected.
    Graphical window mode may be forced back with --of window.
  + hwloc-calc now accepts "numa" in -H, and I/O subtypes such as "gpu"
    in -I and -N.


Version 2.8.0
-------------
* API
  + Add HWLOC_TOPOLOGY_FLAG_NO_DISTANCES, _NO_MEMATTRS and _NO_CPUKINDS
    to reduce the overhead when unneeded.
  + Add separate Read/Write Bandwidth/Latency memory attributes and
    implement them on Linux.
* Backends
  + NUMA nodes may now have a subtype such as DRAM, HBM, SPM, or NVM
    on heterogeneous memory platforms on Linux.
    - Add DAXType and DAXParent attributes on Linux to tell where a