@@ -1,6 +1,6 @@
 /*
  * Copyright © 2009 CNRS
- * Copyright © 2009-2022 Inria.  All rights reserved.
+ * Copyright © 2009-2023 Inria.  All rights reserved.
  * Copyright © 2009-2013, 2015, 2020 Université Bordeaux
  * Copyright © 2009-2018 Cisco Systems, Inc.  All rights reserved.
  * Copyright © 2015 Intel, Inc.  All rights reserved.
@@ -6092,7 +6092,7 @@ hwloc_linuxfs_lookup_block_class(struct hwloc_backend *backend, unsigned osdev_f
      * (unless WHOLE_IO is enabled).
      */
 
-    obj = hwloc_linux_add_os_device(backend, parent, HWLOC_OBJ_OSDEV_BLOCK, dirent->d_name);
+    obj = hwloc_linux_add_os_device(backend, parent, HWLOC_OBJ_OSDEV_STORAGE, dirent->d_name);
 
     hwloc_linuxfs_block_class_fillinfos(backend, root_fd, obj, path, osdev_flags);
   }
@@ -6131,7 +6131,7 @@ hwloc_linuxfs_lookup_dax_class(struct hwloc_backend *backend, unsigned osdev_fla
       if (!parent)
 	continue;
 
-      obj = hwloc_linux_add_os_device(backend, parent, HWLOC_OBJ_OSDEV_BLOCK, dirent->d_name);
+      obj = hwloc_linux_add_os_device(backend, parent, HWLOC_OBJ_OSDEV_STORAGE, dirent->d_name);
 
       annotate_dax_parent(obj, dirent->d_name, root_fd);
 
@@ -6642,7 +6642,7 @@ hwloc_linuxfs_lookup_cxlmem(struct hwloc_backend *backend, unsigned osdev_flags)
       if (!parent)
 	continue;
 
-      obj = hwloc_linux_add_os_device(backend, parent, HWLOC_OBJ_OSDEV_BLOCK, dirent->d_name);
+      obj = hwloc_linux_add_os_device(backend, parent, HWLOC_OBJ_OSDEV_STORAGE, dirent->d_name);
 
       hwloc_linuxfs_cxlmem_fillinfos(root_fd, obj, path);
     }
