@@ -84,7 +84,7 @@ extern "C" {
 
 #define hwloc_obj_osdev_type_e HWLOC_NAME(obj_osdev_type_e)
 #define hwloc_obj_osdev_type_t HWLOC_NAME(obj_osdev_type_t)
-#define HWLOC_OBJ_OSDEV_BLOCK HWLOC_NAME_CAPS(OBJ_OSDEV_BLOCK)
+#define HWLOC_OBJ_OSDEV_STORAGE HWLOC_NAME_CAPS(OBJ_OSDEV_STORAGE)
 #define HWLOC_OBJ_OSDEV_GPU HWLOC_NAME_CAPS(OBJ_OSDEV_GPU)
 #define HWLOC_OBJ_OSDEV_NETWORK HWLOC_NAME_CAPS(OBJ_OSDEV_NETWORK)
 #define HWLOC_OBJ_OSDEV_OPENFABRICS HWLOC_NAME_CAPS(OBJ_OSDEV_OPENFABRICS)
