@@ -212,7 +212,7 @@ Machine (P#0 total=512GiB Backend=Linux LinuxCgroup=/torque/513099.master.cm.clu
   HostBridge L#0 (buses=0000:[00-01])
     PCIBridge L#1 (busid=0000:00:03.0 id=8086:340a class=0604(PCIBridge) buses=0000:[01-01])
       PCI L#0 (busid=0000:01:00.0 id=1000:0079 class=0104(RAID))
-        Block L#0 (Size=1756495872 SectorSize=512 LinuxDeviceID=8:0) "sda"
+        Storage L#0 (Size=1756495872 SectorSize=512 LinuxDeviceID=8:0) "sda"
 depth 0:           1 Machine (type #0)
  depth 1:          3 Package (type #1)
   depth 2:         3 L3Cache (type #6)
