@@ -101,7 +101,7 @@ Machine (P#0 total=248GiB DMIProductName=UV2000 DMIProductVersion=SGI DMIBoardVe
       HostBridge L#6 (buses=0001:[00-02])
         PCIBridge L#7 (busid=0001:00:03.0 id=8086:3c08 class=0604(PCIBridge) buses=0001:[02-02] PCIVendor="Intel Corporation" PCIDevice="Sandy Bridge IIO PCI Express Root Port 3a in PCI Express Mode")
           PCI L#4 (busid=0001:02:00.0 id=1000:0079 class=0104(RAID) PCIVendor="LSI Logic / Symbios Logic" PCIDevice="MegaRAID SAS 2108 [Liberator]")
-            Block L#2 (LinuxDeviceID=8:0) "sda"
+            Storage L#2 (LinuxDeviceID=8:0) "sda"
   Group0 L#1 (total=62GiB)
     Package L#2 (P#2 total=31GiB CPUVendor=GenuineIntel CPUFamilyNumber=6 CPUModelNumber=45 CPUModel="Intel(R) Xeon(R) CPU E5-4640 0 @ 2.40GHz" CPUStepping=7)
       NUMANode L#2 (P#2 local=31GiB total=31GiB) (disallowed)
